--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "developer-portfolio-starter-code",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,5 +16,10 @@
     "next": "13.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
