--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "developer-portfolio-starter-code",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -18,8 +17,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.19",
+    "@types/react": "^18.2.55",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
